--- a/SD-Hub-Portal/angular.json
+++ b/SD-Hub-Portal/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "SD-Hub-Portal": {
+    "sdhub-portal": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/sd-hub-portal",
+            "outputPath": "dist/sdhub-portal",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -37,7 +37,7 @@
               }
             ],
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/rose-red.css",
+              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "SD-Hub-Portal:build:production"
+              "buildTarget": "sdhub-portal:build:production"
             },
             "development": {
-              "buildTarget": "SD-Hub-Portal:build:development"
+              "buildTarget": "sdhub-portal:build:development"
             }
           },
           "defaultConfiguration": "development"
